--- a/package.json
+++ b/package.json
@@ -3,10 +3,10 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev -p 8899",
+    "dev": "next dev -p 8890",
     "generate:routes": "node scripts/generateRoutes.js",
     "build": "next build",
-    "start": "next start",
+    "start": "next dev -p 8890",
     "lint": "next lint",
     "analyze": "cross-env ANALYZE=true next build"
   },
